#CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#PROJECT(redland)

#########################################
# print build info

# set default build type if it's supported
if (NOT CMAKE_BUILD_TYPE)
   message(STATUS "Build type is not defined -- assuming Debug")
   set(CMAKE_BUILD_TYPE Debug)
endif (NOT CMAKE_BUILD_TYPE)

message(STATUS "Build type is set to -- ${CMAKE_BUILD_TYPE}")
#######################################
SET(CMAKE_INCLUDE_CURRENT_DIR 1)
SET(BUILD_SHARED_LIBS ON)

#######################################
# determine x86 or x64

SET(sys_bit)
IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET(sys_bit x64)
ELSE(CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET(sys_bit x86)
ENDIF(CMAKE_SIZEOF_VOID_P EQUAL 8)

ADD_DEFINITIONS(-DFOUNDER_XDB_SE)

#######################################
# third libs

SET(STORAGE_INCLUDE_DIR ../src/include)
INCLUDE_DIRECTORIES(${STORAGE_INCLUDE_DIR})
SET(STORAGE_DLL_DIR 
	${CMAKE_CURRENT_BINARY_DIR}/../storageEngineDll/${CMAKE_BUILD_TYPE}
	)
LINK_DIRECTORIES(${STORAGE_DLL_DIR})
if (MSVC)
    INCLUDE_DIRECTORIES(
      ../src/include/port/win32 
      ../src/include/port/win32_msvc
    )
 endif(MSVC)

SET(LIBXML2_INCLUDE_DIR libxml2/include)
INCLUDE_DIRECTORIES(
	${LIBXML2_INCLUDE_DIR})
SET(LIBXML2_LIBRARY_DIR libxml2/lib/${CMAKE_SYSTEM_NAME}/${sys_bit})
LINK_DIRECTORIES(
	${LIBXML2_LIBRARY_DIR})

IF(MSVC)
	SET(LIBXML2_NAME libxml2)
ELSE(MSVC)
	SET(LIBXML2_NAME xml2)
ENDIF(MSVC)

SET(PCRE_NAME pcre)
SET(RAPTOR2_NAME raptor2)
SET(RASQAL_NAME rasqal)
SET(REDLAND_NAME redland)

######################################
#check header file , functon and data type etc

INCLUDE(CheckIncludeFile)
INCLUDE(CheckIncludeFiles)
INCLUDE(CheckFunctionExists)
INCLUDE(CheckTypeSize)
INCLUDE(CheckStructHasMember)
INCLUDE(CheckCSourceCompiles)

CHECK_INCLUDE_FILE(errno.h	HAVE_ERRNO_H)
CHECK_INCLUDE_FILE(fcntl.h	HAVE_FCNTL_H)
CHECK_INCLUDE_FILE(getopt.h	HAVE_GETOPT_H)
CHECK_INCLUDE_FILE(limits.h	HAVE_LIMITS_H)
CHECK_INCLUDE_FILE(math.h	HAVE_MATH_H)
CHECK_INCLUDE_FILE(setjmp.h	HAVE_SETJMP_H)
CHECK_INCLUDE_FILE(stddef.h	HAVE_STDDEF_H)
CHECK_INCLUDE_FILE(stdlib.h	HAVE_STDLIB_H)
CHECK_INCLUDE_FILE(string.h	HAVE_STRING_H)
CHECK_INCLUDE_FILE(unistd.h	HAVE_UNISTD_H)
CHECK_INCLUDE_FILE(sys/param.h	HAVE_SYS_PARAM_H)
CHECK_INCLUDE_FILE(sys/stat.h	HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILE(sys/stat.h	HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILE(sys/time.h	HAVE_SYS_TIME_H)
CHECK_INCLUDE_FILE(time.h	    HAVE_TIME_H)
CHECK_INCLUDE_FILE(float.h	    HAVE_FLOAT_H)
CHECK_INCLUDE_FILE(stdint.h	    HAVE_STDINT_H)

CHECK_INCLUDE_FILES("sys/time.h;time.h" TIME_WITH_SYS_TIME)

CHECK_FUNCTION_EXISTS(access		HAVE_ACCESS)
CHECK_FUNCTION_EXISTS(_access		HAVE__ACCESS)
CHECK_FUNCTION_EXISTS(getopt		HAVE_GETOPT)
CHECK_FUNCTION_EXISTS(getopt_long	HAVE_GETOPT_LONG)
CHECK_FUNCTION_EXISTS(gettimeofday	HAVE_GETTIMEOFDAY)
CHECK_FUNCTION_EXISTS(isascii		HAVE_ISASCII)
CHECK_FUNCTION_EXISTS(setjmp		HAVE_SETJMP)
CHECK_FUNCTION_EXISTS(snprintf		HAVE_SNPRINTF)
CHECK_FUNCTION_EXISTS(_snprintf		HAVE__SNPRINTF)
CHECK_FUNCTION_EXISTS(stat		    HAVE_STAT)
CHECK_FUNCTION_EXISTS(strcasecmp	HAVE_STRCASECMP)
CHECK_FUNCTION_EXISTS(stricmp		HAVE_STRICMP)

CHECK_FUNCTION_EXISTS(_stricmp		HAVE__STRICMP)
CHECK_FUNCTION_EXISTS(strtok_r		HAVE_STRTOK_R)
CHECK_FUNCTION_EXISTS(vasprintf		HAVE_VASPRINTF)
CHECK_FUNCTION_EXISTS(vsnprintf		HAVE_VSNPRINTF)
CHECK_FUNCTION_EXISTS(_vsnprintf	HAVE__VSNPRINTF)
CHECK_FUNCTION_EXISTS(strnicmp		HAVE_STRNICMP)
CHECK_FUNCTION_EXISTS(_strnicmp		HAVE__STRNICMP)
CHECK_FUNCTION_EXISTS(close		    HAVE_CLOSE)
CHECK_FUNCTION_EXISTS(_close		HAVE__CLOSE)
CHECK_FUNCTION_EXISTS(unlink		HAVE_UNLINK)
CHECK_FUNCTION_EXISTS(_unlink		HAVE__UNLINK)
CHECK_FUNCTION_EXISTS(mktemp		HAVE_MKTEMP)
CHECK_FUNCTION_EXISTS(_mktemp		HAVE__MKTEMP)
CHECK_FUNCTION_EXISTS(mkstemp		HAVE_MKSTEMP)

CHECK_TYPE_SIZE("unsigned char"		SIZEOF_UNSIGNED_CHAR)
CHECK_TYPE_SIZE("unsigned short"	SIZEOF_UNSIGNED_SHORT)
CHECK_TYPE_SIZE("unsigned int"		SIZEOF_UNSIGNED_INT)
CHECK_TYPE_SIZE("unsigned long"		SIZEOF_UNSIGNED_LONG)
CHECK_TYPE_SIZE("unsigned long long"	SIZEOF_UNSIGNED_LONG_LONG)

###############################################################
ADD_SUBDIRECTORY(raptor2)
ADD_SUBDIRECTORY(rasqal)
ADD_SUBDIRECTORY(redland)
